Bug 153105 - After saving the background style, the custom size will change.
Summary: After saving the background style, the custom size will change.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.6.0
Keywords: filter:pptx
: 132049 (view as bug list)
Depends on:
Blocks: Area-Fill-Tab-Image
  Show dependency treegraph
 
Reported: 2023-01-19 09:37 UTC by NISZ LibreOffice Team
Modified: 2023-05-29 17:27 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (24.26 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-01-19 09:39 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem (446.25 KB, image/png)
2023-01-19 09:39 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-01-19 09:37:38 UTC
Description:
In Impress, in the "Slide Properties" menu, the background style changes back to "Tiled" after saving "Custom position/size".

Steps to Reproduce:
1: Open impress
2: Right click -> Slide Properties
3: Click Background
4: Click Image
5: Select an image of your choice
6: Under Options -> Style select Custom position/size.
7: Save PPTX
8: File -> Reload 

Actual Results:
Does not keep the Custom position/size.

Expected Results:
The set Custom position/size will not be changed.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fc441f3886330c4ae2abeb67c0758b935ba23f47
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-01-19 09:39:03 UTC
Created attachment 184774 [details]
Sample file
Comment 2 NISZ LibreOffice Team 2023-01-19 09:39:34 UTC
Created attachment 184775 [details]
Screenshot of the problem
Comment 3 Stéphane Guillou (stragu) 2023-01-19 23:16:11 UTC
Reproduced with steps from new document with:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 579d144290c1617fdb38d09b30900a6bbe390b8d
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fr-FR (en_AU.UTF-8); UI: en-US
Calc: threaded

In my tests, at least since LO 6.1, the custom size goes from the 1×1 cm I chose to 13.55×13.55 cm when saved as PPTX (nut not when saved as ODP).

Version: 6.1.0.3
Build ID: efb621ed25068d70781dc026f7e9c5187a4decd1
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk2; 
Locale: en-AU (en_AU.UTF-8); Calc: group threaded

(In 6.1 however – but not after – I could sometimes see the custom size 1×1 cm change straight away to 13.55×13.55 cm when applied, without needing to save as PPTX. Maybe an indication that it's not exclusively related to the PPTX filter.)

The image isn't even correctly displayed according to the erroneous size (it should span close to the whole slide height of 15.75 cm, but spans less than a third of it).

Could be the same issue as bug 132049.
Comment 4 Gabor Kelemen (Collabora) 2023-02-20 23:31:09 UTC
(In reply to Stéphane Guillou (stragu) from comment #3)
> (In 6.1 however – but not after – I could sometimes see the custom size 1×1
> cm change straight away to 13.55×13.55 cm when applied, without needing to
> save as PPTX. Maybe an indication that it's not exclusively related to the
> PPTX filter.)

That may be bug 152295 ?
Comment 5 Commit Notification 2023-02-28 11:21:32 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/11451781d4c562f506a3aae3732e35b92387b4db

tdf#153105 PPTX export: fix "Custom position/size" background image

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Stéphane Guillou (stragu) 2023-03-06 09:02:06 UTC
I just tested the fix a master build and still see problems.

After saving, the background changes to "Stretched" style. (And the custom size is lost anyway.)

Are you seeing the same thing, Tibor?

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: feda414f8b70f50a9f6745d2ce8828316d4711cd
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 7 NISZ LibreOffice Team 2023-03-28 07:59:54 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4daeb21a5f533144fd6b3bc397a98f37e5b1dd4c
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 8 Tibor Nagy 2023-03-30 08:39:07 UTC
*** Bug 132049 has been marked as a duplicate of this bug. ***